@@ -5,8 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     </head>
     <frameset cols="40%, 40%, 20%">
-        <frame src="frame_1.html" id="frame_1" name="frame1" />
-        <frame src="frame_2.html" id="frame_2" name="frame2" />
-        <frame src="frame_3.html" id="frame_3" name="frame3" />
+        <frame src="frame_1.html" id="frame_one_1" name="frame1" />
+        <frame src="frame_2.html" id="frame_two_2" name="frame2" />
+        <frame src="frame_3.html" id="frame_three_3" name="frame3" />
     </frameset>
 </html>
