@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Iframes</h1>
-        <iframe src="frame_1.html" id="frame_1" name="frame1" class="iframe"></iframe>
-        <iframe src="frame_2.html" id="frame_2" name="frame2" class="iframe"></iframe>
+        <iframe src="frame_1.html" id="frame_one_1" name="frame1" class="iframe"></iframe>
+        <iframe src="frame_2.html" id="frame_two_2" name="frame2" class="iframe"></iframe>
     </body>
 </html>
